🐛 fix: isblank 사용
isempty -> isblank로 변경